# dorito

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.circleci/: config.yml
.github/workflows/: build-release.yml
cmake/: AddFonts.cmake  AddIconToBinary.cmake  AddPNG.cmake  AddPlist.cmake
platform/: FolderManager.h  FolderManager.mm  Info.plist  Info.plist.in  WinMainStub.cpp  dorito.icns
src/: main.cpp
src/code/: BreakpointEditorWidget.cpp  BreakpointEditorWidget.h  ZepImGuiExCommand.cpp  ZepImGuiExCommand.h  ZepSyntaxOcto.cpp  ZepSyntaxOcto.h
src/common/: GamePrefs.cpp  GamePrefs.h  Preferences.cpp  Preferences.h  Resources.cpp  Resources.h  common.cpp  common.h  config.h.in
src/core/: Dorito.cpp  Dorito.h
src/core/events/: Event.h  EventManager.h  Events.h
src/core/input/: Input.cpp  Input.h  InputActions.h  Keys.h  Mapping.h
src/core/layers/: GameLayer.h  GameLayerStack.cpp  GameLayerStack.h
src/cpu/: Chip8.cpp  Chip8.h  Memory.cpp  Memory.h
src/display/: Display.cpp  Display.h
src/layers/: Emu.cpp  Emu.h  UI.cpp  UI.h
src/system/: Bus.cpp  Bus.h
src/widgets/: AudioWidget.cpp  AudioWidget.h  BreakpointsWidget.cpp  BreakpointsWidget.h  ColorEditorWidget.cpp  ColorEditorWidget.h  DisassemblyWidget.cpp  DisassemblyWidget.h  EditorWidget.cpp  EditorWidget.h  MainMenuWidget.cpp  MainMenuWidget.h  MemoryEditorWidget.cpp  MemoryEditorWidget.h  MonitorsWidget.cpp  MonitorsWidget.h  RegistersWidget.cpp  RegistersWidget.h  SoundEditorWidget.cpp  SoundEditorWidget.h  SpriteEditorWidget.cpp  SpriteEditorWidget.h  ViewportWidget.cpp  ViewportWidget.h  Widget.h
